File/syntax.output
Terminals unused in grammar

    STRING
    UNDEFINE


State 23 conflicts: 2 shift/reduce
State 27 conflicts: 2 shift/reduce
State 74 conflicts: 18 shift/reduce
State 75 conflicts: 18 shift/reduce
State 118 conflicts: 18 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList error
    6       | Specifier SEMI
    7       | Specifier error
    8       | Specifier FunDec CompSt

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT ID LC DefList RC
   14                | STRUCT ID LC DefList error
   15                | STRUCT ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB INT error

   19 FunDec: ID LP VarList RP
   20       | ID LP VarList error
   21       | ID LP RP
   22       | ID LP error

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC DefList StmtList error

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | Def
   32     | Exp error
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | RETURN error SEMI
   36     | RETURN Exp error
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp error Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | IF LP Exp error Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | WHILE LP Exp error Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList error

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGN Exp
   51    | VarDec ASSIGN error

   52 Operate: ASSIGN
   53        | AND
   54        | OR
   55        | LT
   56        | LE
   57        | GT
   58        | GE
   59        | NE
   60        | EQ
   61        | PLUS
   62        | MINUS
   63        | MUL
   64        | DIV
   65        | BITAND
   66        | BITOR
   67        | BITXOR

   68 Exp: ID LP Args RP
   69    | ID LP Args error
   70    | Exp Operate Exp
   71    | LP Exp RP
   72    | MINUS Exp
   73    | NOT Exp
   74    | ID LP RP
   75    | Exp LB Exp RB
   76    | Exp DOT ID
   77    | ID
   78    | INT
   79    | FLOAT
   80    | CHAR
   81    | Exp Operate error
   82    | LP Exp error
   83    | ID LP error
   84    | Exp LB Exp error

   85 Args: Exp COMMA Args
   86     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 7 14 18 20 22 27 32 35 36 38 40 42 46 51 69 81 82 83 84
    INT (258) 17 18 78
    FLOAT (259) 79
    CHAR (260) 80
    ID (261) 13 14 15 16 19 20 21 22 68 69 74 76 77 83
    TYPE (262) 11
    STRUCT (263) 13 14 15
    IF (264) 37 38 39 40
    ELSE (265) 39 40
    WHILE (266) 41 42
    RETURN (267) 34 35 36
    DOT (268) 76
    SEMI (269) 4 6 30 34 35 45
    COMMA (270) 10 23 48 85
    ASSIGN (271) 50 51 52
    LT (272) 55
    LE (273) 56
    GT (274) 57
    GE (275) 58
    NE (276) 59
    EQ (277) 60
    PLUS (278) 61
    MINUS (279) 62 72
    MUL (280) 63
    DIV (281) 64
    AND (282) 53
    OR (283) 54
    NOT (284) 73
    LP (285) 19 20 21 22 37 38 39 40 41 42 68 69 71 74 82 83
    RP (286) 19 21 37 39 41 68 71 74
    LB (287) 17 18 75 84
    RB (288) 17 75
    LC (289) 13 14 26 27
    RC (290) 13 26
    STRING (291)
    UNDEFINE (292)
    BITAND (293) 65
    BITOR (294) 66
    BITXOR (295) 67


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program (42)
        on left: 1
        on right: 0
    ExtDefList (43)
        on left: 2 3
        on right: 1 2
    ExtDef (44)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList (45)
        on left: 9 10
        on right: 4 5 10
    Specifier (46)
        on left: 11 12
        on right: 4 5 6 7 8 25 45 46
    StructSpecifier (47)
        on left: 13 14 15
        on right: 12
    VarDec (48)
        on left: 16 17 18
        on right: 9 10 17 18 25 49 50 51
    FunDec (49)
        on left: 19 20 21 22
        on right: 8
    VarList (50)
        on left: 23 24
        on right: 19 20 23
    ParamDec (51)
        on left: 25
        on right: 23 24
    CompSt (52)
        on left: 26 27
        on right: 8 33
    StmtList (53)
        on left: 28 29
        on right: 26 27 28
    Stmt (54)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 28 37 38 39 40 41 42
    DefList (55)
        on left: 43 44
        on right: 13 14 26 27 43
    Def (56)
        on left: 45 46
        on right: 31 43
    DecList (57)
        on left: 47 48
        on right: 45 46 48
    Dec (58)
        on left: 49 50 51
        on right: 47 48
    Operate (59)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 70 81
    Exp (60)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
        on right: 30 32 34 36 37 38 39 40 41 42 50 70 71 72 73 75 76 81 82 84 85 86
    Args (61)
        on left: 85 86
        on right: 68 69 85


State 0

    0 $accept: . Program $end
    1 Program: . ExtDefList
    2 ExtDefList: . ExtDef ExtDefList
    3           | . %empty  [$end]
    4 ExtDef: . Specifier ExtDecList SEMI
    5       | . Specifier ExtDecList error
    6       | . Specifier SEMI
    7       | . Specifier error
    8       | . Specifier FunDec CompSt
   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . ID LC DefList RC
   14                | STRUCT . ID LC DefList error
   15                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: . ExtDef ExtDefList
    2           | ExtDef . ExtDefList
    3           | . %empty  [$end]
    4 ExtDef: . Specifier ExtDecList SEMI
    5       | . Specifier ExtDecList error
    6       | . Specifier SEMI
    7       | . Specifier error
    8       | . Specifier FunDec CompSt
   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList error
    6       | Specifier . SEMI
    7       | Specifier . error
    8       | Specifier . FunDec CompSt
    9 ExtDecList: . VarDec
   10           | . VarDec COMMA ExtDecList
   16 VarDec: . ID
   17       | . VarDec LB INT RB
   18       | . VarDec LB INT error
   19 FunDec: . ID LP VarList RP
   20       | . ID LP VarList error
   21       | . ID LP RP
   22       | . ID LP error

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   13 StructSpecifier: STRUCT ID . LC DefList RC
   14                | STRUCT ID . LC DefList error
   15                | STRUCT ID .  [error, ID, SEMI]

    LC  shift, and go to state 17

    $default  reduce using rule 15 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 12

   16 VarDec: ID .  [error, SEMI, COMMA, LB]
   19 FunDec: ID . LP VarList RP
   20       | ID . LP VarList error
   21       | ID . LP RP
   22       | ID . LP error

    LP  shift, and go to state 18

    $default  reduce using rule 16 (VarDec)


State 13

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec .  [error, SEMI]
   10           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)


State 16

    8 ExtDef: Specifier FunDec . CompSt
   26 CompSt: . LC DefList StmtList RC
   27       | . LC DefList StmtList error

    LC  shift, and go to state 23

    CompSt  go to state 24


State 17

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   13                | STRUCT ID LC . DefList RC
   14                | . STRUCT ID LC DefList error
   14                | STRUCT ID LC . DefList error
   15                | . STRUCT ID
   43 DefList: . Def DefList
   44        | . %empty  [error, RC]
   45 Def: . Specifier DecList SEMI
   46    | . Specifier DecList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 18

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   19 FunDec: ID LP . VarList RP
   20       | ID LP . VarList error
   21       | ID LP . RP
   22       | ID LP . error
   23 VarList: . ParamDec COMMA VarList
   24        | . ParamDec
   25 ParamDec: . Specifier VarDec

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 29

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 19

    5 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: . VarDec
   10           | . VarDec COMMA ExtDecList
   10           | VarDec COMMA . ExtDecList
   16 VarDec: . ID
   17       | . VarDec LB INT RB
   18       | . VarDec LB INT error

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 15


State 22

   17 VarDec: VarDec LB . INT RB
   18       | VarDec LB . INT error

    INT  shift, and go to state 35


State 23

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   26 CompSt: LC . DefList StmtList RC
   27       | LC . DefList StmtList error
   43 DefList: . Def DefList
   44        | . %empty  [error, INT, FLOAT, CHAR, ID, TYPE, STRUCT, IF, WHILE, RETURN, MINUS, NOT, LP, LC, RC]
   45 Def: . Specifier DecList SEMI
   46    | . Specifier DecList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    TYPE      [reduce using rule 44 (DefList)]
    STRUCT    [reduce using rule 44 (DefList)]
    $default  reduce using rule 44 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 27


State 24

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 25

   16 VarDec: . ID
   17       | . VarDec LB INT RB
   18       | . VarDec LB INT error
   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error
   47 DecList: . Dec
   48        | . Dec COMMA DecList
   49 Dec: . VarDec
   50    | . VarDec ASSIGN Exp
   51    | . VarDec ASSIGN error

    ID  shift, and go to state 33

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 26

   13 StructSpecifier: STRUCT ID LC DefList . RC
   14                | STRUCT ID LC DefList . error

    error  shift, and go to state 40
    RC     shift, and go to state 41


State 27

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   43 DefList: . Def DefList
   43        | Def . DefList
   44        | . %empty  [error, INT, FLOAT, CHAR, ID, TYPE, STRUCT, IF, WHILE, RETURN, MINUS, NOT, LP, LC, RC]
   45 Def: . Specifier DecList SEMI
   46    | . Specifier DecList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    TYPE      [reduce using rule 44 (DefList)]
    STRUCT    [reduce using rule 44 (DefList)]
    $default  reduce using rule 44 (DefList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 27


State 28

   22 FunDec: ID LP error .

    $default  reduce using rule 22 (FunDec)


State 29

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 30

   16 VarDec: . ID
   17       | . VarDec LB INT RB
   18       | . VarDec LB INT error
   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   19 FunDec: ID LP VarList . RP
   20       | ID LP VarList . error

    error  shift, and go to state 44
    RP     shift, and go to state 45


State 32

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .  [error, RP]

    COMMA  shift, and go to state 46

    $default  reduce using rule 24 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB
   18       | VarDec LB INT . error

    error  shift, and go to state 47
    RB     shift, and go to state 48


State 36

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   26 CompSt: . LC DefList StmtList RC
   26       | LC DefList . StmtList RC
   27       | . LC DefList StmtList error
   27       | LC DefList . StmtList error
   28 StmtList: . Stmt StmtList
   29         | . %empty  [error, RC]
   30 Stmt: . Exp SEMI
   31     | . Def
   32     | . Exp error
   33     | . CompSt
   34     | . RETURN Exp SEMI
   35     | . RETURN error SEMI
   36     | . RETURN Exp error
   37     | . IF LP Exp RP Stmt
   38     | . IF LP Exp error Stmt
   39     | . IF LP Exp RP Stmt ELSE Stmt
   40     | . IF LP Exp error Stmt ELSE Stmt
   41     | . WHILE LP Exp RP Stmt
   42     | . WHILE LP Exp error Stmt
   45 Def: . Specifier DecList SEMI
   46    | . Specifier DecList error
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    CHAR    shift, and go to state 51
    ID      shift, and go to state 52
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54
    RETURN  shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 23

    $default  reduce using rule 29 (StmtList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    CompSt           go to state 59
    StmtList         go to state 60
    Stmt             go to state 61
    Def              go to state 62
    Exp              go to state 63


State 37

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error
   49 Dec: VarDec .  [error, SEMI, COMMA]
   50    | VarDec . ASSIGN Exp
   51    | VarDec . ASSIGN error

    ASSIGN  shift, and go to state 64
    LB      shift, and go to state 22

    $default  reduce using rule 49 (Dec)


State 38

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error

    error  shift, and go to state 65
    SEMI   shift, and go to state 66


State 39

   47 DecList: Dec .  [error, SEMI]
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 47 (DecList)


State 40

   14 StructSpecifier: STRUCT ID LC DefList error .

    $default  reduce using rule 14 (StructSpecifier)


State 41

   13 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 42

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error
   25 ParamDec: Specifier VarDec .  [error, COMMA, RP]

    LB  shift, and go to state 22

    $default  reduce using rule 25 (ParamDec)


State 44

   20 FunDec: ID LP VarList error .

    $default  reduce using rule 20 (FunDec)


State 45

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 46

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   23 VarList: . ParamDec COMMA VarList
   23        | ParamDec COMMA . VarList
   24        | . ParamDec
   25 ParamDec: . Specifier VarDec

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 68
    ParamDec         go to state 32


State 47

   18 VarDec: VarDec LB INT error .

    $default  reduce using rule 18 (VarDec)


State 48

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 49

   78 Exp: INT .

    $default  reduce using rule 78 (Exp)


State 50

   79 Exp: FLOAT .

    $default  reduce using rule 79 (Exp)


State 51

   80 Exp: CHAR .

    $default  reduce using rule 80 (Exp)


State 52

   68 Exp: ID . LP Args RP
   69    | ID . LP Args error
   74    | ID . LP RP
   77    | ID .  [error, DOT, SEMI, COMMA, ASSIGN, LT, LE, GT, GE, NE, EQ, PLUS, MINUS, MUL, DIV, AND, OR, RP, LB, RB, BITAND, BITOR, BITXOR]
   83    | ID . LP error

    LP  shift, and go to state 69

    $default  reduce using rule 77 (Exp)


State 53

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp error Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp error Stmt ELSE Stmt

    LP  shift, and go to state 70


State 54

   41 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 71


State 55

   34 Stmt: RETURN . Exp SEMI
   35     | RETURN . error SEMI
   36     | RETURN . Exp error
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    error  shift, and go to state 72
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 73


State 56

   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   72    | MINUS . Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 57

   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   73    | NOT . Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


State 58

   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   71    | LP . Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   82    | LP . Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


State 59

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 60

   26 CompSt: LC DefList StmtList . RC
   27       | LC DefList StmtList . error

    error  shift, and go to state 77
    RC     shift, and go to state 78


State 61

   11 Specifier: . TYPE
   12          | . StructSpecifier
   13 StructSpecifier: . STRUCT ID LC DefList RC
   14                | . STRUCT ID LC DefList error
   15                | . STRUCT ID
   26 CompSt: . LC DefList StmtList RC
   27       | . LC DefList StmtList error
   28 StmtList: . Stmt StmtList
   28         | Stmt . StmtList
   29         | . %empty  [error, RC]
   30 Stmt: . Exp SEMI
   31     | . Def
   32     | . Exp error
   33     | . CompSt
   34     | . RETURN Exp SEMI
   35     | . RETURN error SEMI
   36     | . RETURN Exp error
   37     | . IF LP Exp RP Stmt
   38     | . IF LP Exp error Stmt
   39     | . IF LP Exp RP Stmt ELSE Stmt
   40     | . IF LP Exp error Stmt ELSE Stmt
   41     | . WHILE LP Exp RP Stmt
   42     | . WHILE LP Exp error Stmt
   45 Def: . Specifier DecList SEMI
   46    | . Specifier DecList error
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    CHAR    shift, and go to state 51
    ID      shift, and go to state 52
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54
    RETURN  shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 23

    $default  reduce using rule 29 (StmtList)

    Specifier        go to state 25
    StructSpecifier  go to state 7
    CompSt           go to state 59
    StmtList         go to state 79
    Stmt             go to state 61
    Def              go to state 62
    Exp              go to state 63


State 62

   31 Stmt: Def .

    $default  reduce using rule 31 (Stmt)


State 63

   30 Stmt: Exp . SEMI
   32     | Exp . error
   52 Operate: . ASSIGN
   53        | . AND
   54        | . OR
   55        | . LT
   56        | . LE
   57        | . GT
   58        | . GE
   59        | . NE
   60        | . EQ
   61        | . PLUS
   62        | . MINUS
   63        | . MUL
   64        | . DIV
   65        | . BITAND
   66        | . BITOR
   67        | . BITXOR
   70 Exp: Exp . Operate Exp
   75    | Exp . LB Exp RB
   76    | Exp . DOT ID
   81    | Exp . Operate error
   84    | Exp . LB Exp error

    error   shift, and go to state 80
    DOT     shift, and go to state 81
    SEMI    shift, and go to state 82
    ASSIGN  shift, and go to state 83
    LT      shift, and go to state 84
    LE      shift, and go to state 85
    GT      shift, and go to state 86
    GE      shift, and go to state 87
    NE      shift, and go to state 88
    EQ      shift, and go to state 89
    PLUS    shift, and go to state 90
    MINUS   shift, and go to state 91
    MUL     shift, and go to state 92
    DIV     shift, and go to state 93
    AND     shift, and go to state 94
    OR      shift, and go to state 95
    LB      shift, and go to state 96
    BITAND  shift, and go to state 97
    BITOR   shift, and go to state 98
    BITXOR  shift, and go to state 99

    Operate  go to state 100


State 64

   50 Dec: VarDec ASSIGN . Exp
   51    | VarDec ASSIGN . error
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    error  shift, and go to state 101
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 102


State 65

   46 Def: Specifier DecList error .

    $default  reduce using rule 46 (Def)


State 66

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 67

   16 VarDec: . ID
   17       | . VarDec LB INT RB
   18       | . VarDec LB INT error
   47 DecList: . Dec
   48        | . Dec COMMA DecList
   48        | Dec COMMA . DecList
   49 Dec: . VarDec
   50    | . VarDec ASSIGN Exp
   51    | . VarDec ASSIGN error

    ID  shift, and go to state 33

    VarDec   go to state 37
    DecList  go to state 103
    Dec      go to state 39


State 68

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 69

   68 Exp: . ID LP Args RP
   68    | ID LP . Args RP
   69    | . ID LP Args error
   69    | ID LP . Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   74    | ID LP . RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   83    | ID LP . error
   84    | . Exp LB Exp error
   85 Args: . Exp COMMA Args
   86     | . Exp

    error  shift, and go to state 104
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 105

    Exp   go to state 106
    Args  go to state 107


State 70

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp error Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . Exp error Stmt ELSE Stmt
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 108


State 71

   41 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . Exp error Stmt
   68 Exp: . ID LP Args RP
   69    | . ID LP Args error
   70    | . Exp Operate Exp
   71    | . LP Exp RP
   72    | . MINUS Exp
   73    | . NOT Exp
   74    | . ID LP RP
   75    | . Exp LB Exp RB
   76    | . Exp DOT ID
   77    | . ID
   78    | . INT
   79    | . FLOAT
   80    | . CHAR
   81    | . Exp Operate error
   82    | . LP Exp error
   83    | . ID LP error
   84    | . Exp LB Exp error

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    CHAR   shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 109


State 72

   35 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 110


State 73

   34 Stmt: RETURN Exp . SEMI
   36     | RETURN Exp . error
   52 Operate: . ASSIGN
   53        | . AND
   54        | . OR
   55        | . LT
   56        | . LE
   57        | . GT
   58        | . GE
   59        | . NE
   60        | . EQ
   61        | . PLUS
   62        | . MINUS
   63        | . MUL
   64        | . DIV
   65        | . BITAND
   66        | . BITOR
   67        | . BITXOR
   70 Exp: Exp . Operate Exp
   75    | Exp . LB Exp RB
   76    | Exp . DOT ID
   81    | Exp . Operate error
   84    | Exp . LB Exp error
